<resources>
    <string name="app_name">Text Message Exporter</string>
    <string name="button_export_label">Export Text Messages</string>
    <string name="filters_label">Filters:</string>
    <string name="contact_label">Contact: All</string>
    <string name="button_choose_contact_label">Choose Contact</string>
    <string name="all_contacts_label">All</string>
    <string name="hint_label">Click the button below to export messages to a file.</string>
    <string name="label_status_text_file_written">Messages exported. <u>Click to view file.</u></string>
    <string name="label_start_date">Start date:</string>
    <string name="button_start_date_label">Choose start date</string>
    <string name="action_help">Help</string>
    <string name="label_status_busy_exporting">Exporting…</string>
    <string name="label_end_date">End date:</string>
    <string name="button_end_date_label">Choose end date</string>
    <string name="filter_contact_set">Contact: %1$s</string>
    <string name="end_date_set">End date: %1$s</string>
    <string name="start_date_set">Start date: %1$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_export_header">Export Options</string>
    <string name="export_xml_label">Export XML file</string>
    <string name="action_settings">Settings</string>
    <string name="button_email_label">Email Exported File</string>
    <string name="button_reset_start_date_label">Reset</string>
    <string name="button_reset_end_date_label">Reset</string>
    <string name="reset_contact_label">Reset</string>
    <string name="export_text_label">Export plain text file</string>
    <string name="export_csv_label">Export CSV file</string>
    <string name="preview_content_hint">The content of the previewed file.</string>
    <string name="enable_logging_title">Enable logging</string>
    <string name="logging_header">Logging</string>
    <string name="choose_file_type_label">Choose exported file type</string>
    <string name="file_type_chosen_value">%1$s</string>
    <string name="email_options_label">Email Options</string>
    <string name="default_email_address_label">Default recipient email address</string>
    <string name="title_activity_help">Help</string>
</resources>