<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_export_header">

        <ListPreference
            android:defaultValue="@string/text"
            android:entries="@array/export_files_types"
            android:entryValues="@array/export_files_types"
            android:key="exported_file_type"
            android:title="Choose exported file type" />

    </PreferenceCategory>
    <PreferenceCategory android:title="User Interface">

        <SwitchPreference
            android:key="show_progress_bar"
            android:title="Show progress bar for export" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/logging_header">

        <SwitchPreferenceCompat
            app:key="enable_logging"
            app:title="@string/enable_logging_title" />

    </PreferenceCategory>

</PreferenceScreen>